--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,22 @@
 .navbar .nav-item.active {
     border-left: #444 3px solid;
 }
+
+.carousel-item {
+    height: 450px;
+}
+
+.carousel-image-1 {
+    background: url(../img/image1.jpg);
+    size: cover;
+}
+
+.carousel-image-2 {
+    background: url(../img/image2.jpg);
+    size: cover;
+}
+
+.carousel-image-3 {
+    background: url(../img/image3.jpg);
+    size: cover;
+}
