--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,16 @@ body {
         margin-bottom: 0 !important;
     }
 }
+
+/* services */
+#services .container .col-md-4:first-child .list-group-item:nth-child(-n+2) i {
+    color: green;
+}
+
+#services .container .col-md-4:nth-child(2) .list-group-item:nth-child(-n+4) i {
+    color: green;
+}
+
+#services .container .col-md-4:nth-child(3) .list-group-item:nth-child(-n+5) i {
+    color: green;
+}
